--- a/html/about.html
+++ b/html/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Website Title -->
-    <title>Estéban Piecourt — Home</title>
+    <title>Estéban Piecourt — About</title>
 
     <!-- Meta Data -->
     <meta charset="UTF-8" />
@@ -71,7 +71,7 @@
     <link
       rel="stylesheet/less"
       type="text/css"
-      href="assets/scss/common/hero/hero.scss"
+      href="assets/scss/about-page/about-page.scss"
     />
     <link
       rel="stylesheet/less"
@@ -111,6 +111,14 @@
 
       <!-- Hero Section -->
       <section class="hero">
+        <div class="title">About Me</div>
+        <div class="description">
+          Want to know more about me ? You've come to the right place
+        </div>
+      </section>
+
+      <!-- About Section -->
+      <section class="about">
         <img
           class="icon"
           src="assets/img/avatars/thumbs_up.png"
@@ -119,38 +127,13 @@
 
         <div class="contents">
           <div class="title">Estéban Piecourt</div>
-          <div class="description">Developer, Designer</div>
-          <div class="socials">
-            <div class="socials-links">
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/github.svg"
-                  draggable="false"
-                  alt="GitHub Icon"
-                />
-              </a>
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/gitlab.svg"
-                  draggable="false"
-                  alt="GitLab Icon"
-                />
-              </a>
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/buy-me-a-coffee.svg"
-                  draggable="false"
-                  alt="BuyMeACoffee Icon"
-                />
-              </a>
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/twitter.svg"
-                  draggable="false"
-                  alt="Twitter Icon"
-                />
-              </a>
-            </div>
+          <div class="description">
+            Hi, I'm Estéban Piecourt, a 19-year-old FullStack Developer based in
+            Strasbourg. With 3 years of experience in web development, I'm
+            passionate about creating innovative and dynamic web solutions. I'm
+            committed to crafting digital experiences that push the boundaries
+            of what's possible. Explore my portfolio and feel free to get in
+            touch to collaborate on your next web project today.
           </div>
         </div>
       </section>
@@ -253,188 +236,29 @@
         </ul>
       </section>
 
-      <!-- Projects -->
-      <section class="projects">
-        <div class="title">Projects</div>
+      <!-- Experiences -->
+      <section class="techs">
+        <div class="title">Experiences</div>
         <div class="description">
-          Projects on which I was able to work and collaborate
+          Different professional experiences that I was able to acquire
         </div>
         <ul class="contents">
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Project Thumbnail"
-              />
-              <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
-              </div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Project Thumbnail"
-              />
-              <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
-              </div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Project Thumbnail"
-              />
-              <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
-              </div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Project Thumbnail"
-              />
-              <div class="item-content">
-                <div class="title">Project Title</div>
-                <div class="description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-                  rem eaque dolore libero voluptates consectetur quibusdam earum
-                  ex repellat corporis ipsam reiciendis quaerat necessitatibus
-                  facere nam vero, illo unde sunt.
-                </div>
-              </div>
-            </li>
-          </a>
+          <li class="item">
+            <div class="item-content">
+              <div class="title">Ciagec</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <div class="title">Whimsy Studio</div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <div class="title">Omega Groups</div>
+            </div>
+          </li>
         </ul>
-        <a class="custom-button" href="/">
-          <img
-            class="icon"
-            src="assets/img/icons/circle.svg"
-            draggable="false"
-            alt="See More Icon"
-          />
-          See More
-        </a>
-      </section>
-
-      <!-- Blog -->
-      <section class="blogs">
-        <div class="title">Blog</div>
-        <div class="description">
-          Where I love to share my knowledge through writing
-        </div>
-        <ul class="contents">
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-        </ul>
-        <a class="custom-button" href="/">
-          <img
-            class="icon"
-            src="assets/img/icons/circle.svg"
-            draggable="false"
-            alt="See More Icon"
-          />
-          See More
-        </a>
-      </section>
-
-      <!-- Call To Action -->
-      <section class="call-to-action">
-        <div class="contents">
-          <div class="title">Ready to entrust your mission ?</div>
-          <div class="description">
-            Contact me today to discuss how we can help you achieve your goals.
-          </div>
-          <img
-            class="wave"
-            src="assets/img/icons/wave.svg"
-            draggable="false"
-            alt="Wave Separator"
-          />
-          <a class="custom-button" href="/">
-            <img
-              class="icon"
-              src="assets/img/icons/hand.svg"
-              draggable="false"
-              alt="Contact Me Icon"
-            />
-            Contact Me
-          </a>
-        </div>
       </section>
 
       <!-- Footer -->
