--- a/html/projects.html
+++ b/html/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Website Title -->
-    <title>Estéban Piecourt — Home</title>
+    <title>Estéban Piecourt — Projects</title>
 
     <!-- Meta Data -->
     <meta charset="UTF-8" />
@@ -71,7 +71,7 @@
     <link
       rel="stylesheet/less"
       type="text/css"
-      href="assets/scss/common/hero/hero.scss"
+      href="assets/scss/projects-page/projects-page.scss"
     />
     <link
       rel="stylesheet/less"
@@ -111,154 +111,14 @@
 
       <!-- Hero Section -->
       <section class="hero">
-        <img
-          class="icon"
-          src="assets/img/avatars/thumbs_up.png"
-          alt="Estéban Thumbs Up"
-        />
-
-        <div class="contents">
-          <div class="title">Estéban Piecourt</div>
-          <div class="description">Developer, Designer</div>
-          <div class="socials">
-            <div class="socials-links">
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/github.svg"
-                  draggable="false"
-                  alt="GitHub Icon"
-                />
-              </a>
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/gitlab.svg"
-                  draggable="false"
-                  alt="GitLab Icon"
-                />
-              </a>
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/buy-me-a-coffee.svg"
-                  draggable="false"
-                  alt="BuyMeACoffee Icon"
-                />
-              </a>
-              <a class="social" href="#">
-                <img
-                  src="assets/img/socials/twitter.svg"
-                  draggable="false"
-                  alt="Twitter Icon"
-                />
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Technologies -->
-      <section class="techs">
-        <div class="title">Technologies</div>
+        <div class="title">Projects</div>
         <div class="description">
-          Different technologies that I use on a daily basis
+          Projects on wich I was able to work and collaborate
         </div>
-        <ul class="contents">
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-          <li class="item">
-            <div class="item-content">
-              <img
-                class="icon"
-                src="assets/img/techs/html.svg"
-                draggable="false"
-                alt="HTML"
-              />
-              <div class="title">HTML</div>
-            </div>
-          </li>
-        </ul>
       </section>
 
       <!-- Projects -->
       <section class="projects">
-        <div class="title">Projects</div>
-        <div class="description">
-          Projects on which I was able to work and collaborate
-        </div>
         <ul class="contents">
           <a class="link" href="/">
             <li class="item">
@@ -337,79 +197,6 @@
             </li>
           </a>
         </ul>
-        <a class="custom-button" href="/">
-          <img
-            class="icon"
-            src="assets/img/icons/circle.svg"
-            draggable="false"
-            alt="See More Icon"
-          />
-          See More
-        </a>
-      </section>
-
-      <!-- Blog -->
-      <section class="blogs">
-        <div class="title">Blog</div>
-        <div class="description">
-          Where I love to share my knowledge through writing
-        </div>
-        <ul class="contents">
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-          <a class="link" href="/">
-            <li class="item">
-              <img
-                class="thumbnail"
-                src="assets/img/textures/2.png"
-                draggable="false"
-                alt="Blog Thumbnail"
-              />
-              <div class="title">Blog Title</div>
-              <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              </div>
-              <div class="date">September 29, 2023</div>
-            </li>
-          </a>
-        </ul>
-        <a class="custom-button" href="/">
-          <img
-            class="icon"
-            src="assets/img/icons/circle.svg"
-            draggable="false"
-            alt="See More Icon"
-          />
-          See More
-        </a>
       </section>
 
       <!-- Call To Action -->
